# Bindle

./: .gitignore  README.md  make.ps1
src/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BINDLE.sln  CMakeLists.txt  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
src/bindle/: CMakeLists.txt  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  bindle.cpp  bindle.vcxproj  bindle.vcxproj.filters
src/tests/: CMakeLists.txt  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  installer_tests.vcxproj  installer_tests.vcxproj.filters  testGroups.cpp
