message(">> BUILDING BINDLE")
cmake_minimum_required(VERSION 3.28)
project(BINDLE)

#Set paths
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/lib)

set(ROOTDIR ${CMAKE_CURRENT_SOURCE_DIR}/build)

#Standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

#Build
set(BINDLE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bindle)
set(TEST_DIR ${CMAKE_CURRENT_SOURCE_DIR}/tests)

add_subdirectory(bindle)

#Tests
enable_testing()
add_subdirectory(tests)
